<resources>
    <string name="app_name">Алгем</string>
    <string name="beSmart">Становись умнее</string>
    <string name="algebra">Алгебра</string>
    <string name="vk">Группа в VK</string>
    <string name="feedback">Обратная связь</string>
    <string name="site">Наш сайт</string>
    <string name="geometric">Геометрия</string>
    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>
    <string name="exit">Нажмите назад еще раз, чтобы выйти</string>
    <string name="next">ПРОДОЛЖИТЬ</string>
</resources>
